remove defaultsSection, rename client section, minor fixes